<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Dental Helping Hands</string>
    <string name="lbl_dental">Dental</string>
    <string name="lbl_helping_hands">Helping Hands</string>
    <string name="lbl_dental_helping_hands">@string/app_name</string>
    <string name="btn_dental_office">Dental Office</string>
    <string name="btn_dental_professional">Dental Professional</string>
    <string name="title_dental_office_sign_in">Dental Office Sign In</string>
    <string name="lbl_username_or_email_address">Username or Email Address</string>
    <string name="hint_enter_username_or_email_address">Enter Username or Email Address</string>
    <string name="lbl_password">Password</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="link_forgot_password_">Forgot Password?</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="lbl_do_not_have_an_account_">Don\'t have an account?</string>
    <string name="link_sign_up">Sign Up</string>
    <string name="title_dental_office_sign_up">Dental Office Sign Up</string>
    <string name="lbl_practice_name_">Practice Name<font color='#FF0000'>*</font></string>
    <string name="hint_enter_practice_name">Enter Practice Name</string>
    <string name="lbl_type_of_practice_">Type of Practice<font color='#FF0000'>*</font></string>
    <string name="select_type_of_practice">Select Type of Practice</string>
    <string name="lbl_web_address">Web Address</string>
    <string name="hint_enter_web_address">Enter Web Address</string>
    <string name="lbl_contact_name_">Contact Name<font color='#FF0000'>*</font></string>
    <string name="hint_enter_contact_name">Enter Contact Name</string>
    <string name="lbl_phone_number_">Phone Number<font color='#FF0000'>*</font></string>
    <string name="hint_enter_phone_number">Enter Phone Number</string>
    <string name="lbl_practice_address_">Practice Address<font color='#FF0000'>*</font></string>
    <string name="hint_enter_practice_address">Enter Practice Address</string>
    <string name="lbl_email_address_">Email Address<font color='#FF0000'>*</font></string>
    <string name="hint_enter_email_address">Enter Email Address</string>
    <string name="lbl_username_">Username<font color='#FF0000'>*</font></string>
    <string name="hint_enter_username">Enter Username</string>
    <string name="lbl_password_">Password<font color='#FF0000'>*</font></string>
    <string name="lbl_confirm_password_">Confirm Password<font color='#FF0000'>*</font></string>
    <string name="hint_enter_confirm_password">Enter Confirm Password</string>
    <string name="lbl_referred_by">Referred By</string>
    <string name="hint_enter_referred_by">Enter Referred By</string>
    <string name="lbl_notification_preference_">Notification Preference<font color='#FF0000'>*</font></string>
    <string name="select_notification_preference">Select Notification Preference</string>
    <string name="content_agree_tc_and_pp">I agree to the Terms &amp; Conditions and Privacy Policy</string>
    <string name="paragraph_1">I agree to the </string>
    <string name="paragraph_2"> and </string>
    <string name="paragraph_3">.</string>
    <string name="hint_link_term_service">Terms &amp; Conditions</string>
    <string name="hint_link_privacy_policy">Privacy Policy</string>
    <string name="link_1" translatable="false">dhh_link_1</string>
    <string name="link_2" translatable="false">dhh_link_2</string>
    <string name="lbl_already_have_an_account_">Already have an account?</string>
    <string name="link_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string-array name="spinner_type_of_practice">
        <item>@string/select_type_of_practice</item>
        <item>General</item>
        <item>Periodontal</item>
        <item>Pediatric</item>
        <item>Other</item>
    </string-array>
    <string-array name="spinner_notification_preference">
        <item>@string/select_notification_preference</item>
        <item>Text</item>
        <item>Email</item>
        <item>Both</item>
    </string-array>
    <string-array name="spinner_availability">
        
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="content_forgot_password">Enter the email address associated with your account. We will email you a link to reset your password.</string>
    <string name="lbl_email_address">Email Address</string>
    <string name="btn_send_link">Send Link</string>
    <string name="title_privacy">Privacy</string>
    <string name="title_terms_and_conditions">Terms &amp; Conditions</string>
    <string name="title_about_us">About Us</string>
    <string name="msg_loading">Loading...</string>
    <string name="title_dentist_location">Dentist Location</string>
    <string name="btn_post_a_job">Post A Job</string>
    <string name="btn_my_listing">My Listing</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_privacy">Privacy</string>
    <string name="menu_terms_and_conditions">Terms &amp; Conditions</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_logout"><u>Logout</u></string>
    <string name="title_logout">Logout</string>
    <string name="msg_logout">Are you sure you want to logout?</string>
    <string name="title_post_a_job">Post A Job</string>
    <string name="lbl_professional_">Professional<font color='#FF0000'>*</font></string>
    <string name="select_professional">Select Professional</string>
    <string name="lbl_dental_software">Dental Software</string>
    <string name="hint_enter_dental_software">Enter Dental Software</string>
    <string name="lbl_time_per_patients_">Time Per Patients<font color='#FF0000'>*</font></string>
    <string name="hint_enter_time_per_patients">Enter Time Per Patients</string>
    <string name="lbl_office_address_">Office Address<font color='#FF0000'>*</font></string>
    <string name="hint_enter_office_address">Enter Office Address</string>
    <string name="lbl_start_time_">Start Time<font color='#FF0000'>*</font></string>
    <string name="select_hour_slots">Select hour slots</string>
    <string name="lbl_end_time_">End Time<font color='#FF0000'>*</font></string>
    <string name="lbl_lunch_time_start_">Lunch Time Start<font color='#FF0000'>*</font></string>
    <string name="lbl_lunch_time_end_">Lunch Time End<font color='#FF0000'>*</font></string>
    <string name="lbl_price_type_">Price Type<font color='#FF0000'>*</font></string>
    <string name="select_price_type">Select Price Type</string>
    <string name="lbl_to">TO</string>
    <string name="lbl_price_">Price<font color='#FF0000'>*</font></string>
    <string name="hint_enter_price">Enter Price</string>
    <string name="btn_post">Post</string>
    <string-array name="spinner_professional">
        <item>@string/select_professional</item>
        <item>General</item>
        <item>Periodontal</item>
        <item>Pediatric</item>
        <item>Other</item>
    </string-array>
    <string-array name="spinner_price_type">
        <item>@string/select_price_type</item>
        <item>Hourly</item>
        <item>Daily</item>
        <item>Negotiable</item>
    </string-array>
    <string name="title_my_listing">My Listing</string>
    <string name="btn_done">Done</string>
    <string name="lbl_professional_column">Professional:</string>
    <string name="lbl_address_column">Address:</string>
    <string name="lbl_phone_number_column">Phone Number:</string>
    <string name="lbl_type_of_practice_column">Type of Practice:</string>
    <string name="lbl_dental_software_column">Dental Software:</string>
    <string name="lbl_average_patients_column">Average Patients:</string>
    <string name="lbl_time_per_patients_column">Time Per Patients:</string>
    <string name="lbl_start_time_column">Start Time:</string>
    <string name="lbl_end_time_column">End Time:</string>
    <string name="lbl_lunch_time_column">Lunch Time:</string>
    <string name="lbl_price_column">Price:</string>
    <string name="lbl_post_added_time_column">Post Added Time:</string>
    <string name="btn_next">Next</string>
    <string name="title_select_a_date">Select A Date</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_delete">Delete</string>
    <string name="lbl_opens">Opens</string>
    <string name="lbl_closes">Closes</string>
    <string name="title_notification">Notification</string>
    <string name="title_approve">Approve</string>
    <string name="msg_approve">Are you sure you want to approve this person?</string>
    <string name="btn_no">No</string>
    <string name="btn_yes">Yes</string>
    <string name="title_delete">Delete</string>
    <string name="msg_delete">Are you sure you want to delete this person?</string>
    <string name="btn_save">Save</string>
    <string name="btn_my_profile">My Profile</string>
    <string name="btn_change_password">Change Password</string>
    <string name="title_change_password">Change Password</string>
    <string name="lbl_old_password">Old Password</string>
    <string name="hint_enter_old_password">Enter Old Password</string>
    <string name="lbl_new_password">New Password</string>
    <string name="hint_enter_new_password">Enter New Password</string>
    <string name="lbl_confirm_new_password">Confirm New Password</string>
    <string name="hint_enter_confirm_new_password">Enter Confirm New Password</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="lbl_name">Name</string>
    <string name="hint_enter_name">Enter Name</string>
    <string name="lbl_subject">Subject</string>
    <string name="hint_enter_subject">Enter Subject</string>
    <string name="lbl_message">Message</string>
    <string name="hint_message">Type your message...</string>
    <string name="btn_submit">Submit</string>
    <string name="title_professional_sign_in">Professional Sign In</string>
    <string name="title_professional_sign_up">Professional Sign Up</string>
    <string name="lbl_requested_pay_rate_">Requested Pay Rate<font color='#FF0000'>*</font></string>
    <string name="select_requested_pay_rate">Select Requested Pay Rate</string>
    <string name="lbl_availability_">Availability<font color='#FF0000'>*</font></string>
    <string name="lbl_availability">Availability</string>
    <string name="select_availability">Select Availability</string>
    <string name="lbl_time_start_">Time Start<font color='#FF0000'>*</font></string>
    <string name="lbl_time_end_">Time End<font color='#FF0000'>*</font></string>
    <string name="et_time_start_">Enter Time Start</string>
    <string name="et_time_end_">Enter Time End</string>
    <string name="lbl_years_practicing_">Years Practicing<font color='#FF0000'>*</font></string>
    <string name="hint_enter_years_practicing">Enter Years Practicing</string>
    <string name="lbl_ga_license_number_">GA License Number<font color='#FF0000'>*</font></string>
    <string name="lbl_sc_license_number_">SC License Number<font color='#FF0000'>*</font></string>
    <string name="lbl_fl_license_number_">FL License Number<font color='#FF0000'>*</font></string>
    <string name="lbl_nc_license_number_">NC License Number<font color='#FF0000'>*</font></string>
    <string name="lbl_other_license_number_">Other License Number<font color='#FF0000'>*</font></string>
    <string name="hint_enter_license_information">Enter License Information</string>
    <string name="lbl_name_">Name<font color='#FF0000'>*</font></string>
</resources>