<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical"
    tools:context=".activities.ContactUsActivity">

    <include
        android:id="@+id/ilToolBar"
        layout="@layout/content_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="@string/lbl_name"
                app:fontFamily="@font/font_semi_bold_montserrat" />

            <EditText
                android:id="@+id/etName"
                style="@style/MyEditTextStyle"
                android:layout_marginTop="@dimen/_6sdp"
                android:autofillHints="name"
                android:hint="@string/hint_enter_name"
                android:inputType="textCapWords"
                android:maxLength="@integer/max_length_name"
                android:nextFocusForward="@id/etEmailAddress" />

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/lbl_email_address"
                app:fontFamily="@font/font_semi_bold_montserrat" />

            <EditText
                android:id="@+id/etEmailAddress"
                style="@style/MyEditTextStyle"
                android:layout_marginTop="@dimen/_6sdp"
                android:autofillHints="emailAddress"
                android:hint="@string/hint_enter_email_address"
                android:inputType="textEmailAddress"
                android:maxLength="@integer/max_length_email"
                android:nextFocusForward="@id/etSubject" />

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/lbl_subject"
                app:fontFamily="@font/font_semi_bold_montserrat" />

            <EditText
                android:id="@+id/etSubject"
                style="@style/MyEditTextStyle"
                android:layout_marginTop="@dimen/_6sdp"
                android:hint="@string/hint_enter_subject"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:maxLength="@integer/max_length_name"
                android:nextFocusForward="@id/etMessage" />

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/lbl_message"
                app:fontFamily="@font/font_semi_bold_montserrat" />

            <EditText
                android:id="@+id/etMessage"
                style="@style/MyEditTextMultiLineStyle"
                android:layout_marginTop="@dimen/_6sdp"
                android:hint="@string/hint_message"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:maxLength="@integer/max_length_message" />

            <Button
                android:id="@+id/btnSubmit"
                style="@style/MyButtonStyle"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/btn_submit" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>