<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical"
    tools:context=".activities.office.OfficeSignUpActivity">

    <include
        android:id="@+id/ilToolBar"
        layout="@layout/content_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <RelativeLayout
                android:id="@+id/rlProfile"
                android:layout_width="@dimen/_111sdp"
                android:layout_height="@dimen/_95sdp"
                android:layout_marginTop="@dimen/_8sdp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="@dimen/_95sdp"
                    android:layout_height="match_parent"
                    android:elevation="@dimen/_1sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_place_holder"
                    app:riv_corner_radius="@dimen/_14sdp" />

                <ImageView
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/shape_rect_round"
                    android:elevation="@dimen/_2sdp"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/ic_camera"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_marginTop="@dimen/_24sdp"
                android:text="@string/lbl_practice_name_"
                app:fontFamily="@font/font_semi_bold_montserrat" />

            <EditText
                android:id="@+id/etPracticeName"
                style="@style/MyEditTextStyle"
                android:layout_marginTop="@dimen/_6sdp"
                android:hint="@string/hint_enter_practice_name"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:maxLength="@integer/max_length_name"
                android:nextFocusForward="@id/etWebAddress" />

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/lbl_type_of_practice_"
                app:fontFamily="@font/font_semi_bold_montserrat" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/shape_rect_edittext_un_focus"
                android:elevation="@dimen/_1sdp">

                <LinearLayout
                    android:id="@+id/llTypeOfPractice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etTypeOfPractice"
                        style="@style/MyEditTextStyle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:elevation="0dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/select_type_of_practice"
                        android:importantForAutofill="no" />

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_12sdp"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/ic_arrow_down"
                        android:visibility="visible"
                        tools:ignore="ContentDescription,NewApi" />
                </LinearLayout>

                <Spinner
                    android:id="@+id/spTypeOfPractice"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@null"
                    android:visibility="visible" />
            </RelativeLayout>

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/lbl_web_address"
                app:fontFamily="@font/font_semi_bold_montserrat" />

            <EditText
                android:id="@+id/etWebAddress"
                style="@style/MyEditTextStyle"
                android:layout_marginTop="@dimen/_6sdp"
                android:hint="@string/hint_enter_web_address"
                android:importantForAutofill="no"
                android:inputType="textWebEmailAddress"
                android:maxLength="@integer/max_length_email"
                android:nextFocusForward="@id/etContactName" />

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/lbl_contact_name_"
                app:fontFamily="@font/font_semi_bold_montserrat" />

            <EditText
                android:id="@+id/etContactName"
                style="@style/MyEditTextStyle"
                android:layout_marginTop="@dimen/_6sdp"
                android:hint="@string/hint_enter_contact_name"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:maxLength="@integer/max_length_name"
                android:nextFocusForward="@id/etPhoneNumber" />

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/lbl_phone_number_"
                app:fontFamily="@font/font_semi_bold_montserrat" />

            <EditText
                android:id="@+id/etPhoneNumber"
                style="@style/MyEditTextStyle"
                android:layout_marginTop="@dimen/_6sdp"
                android:autofillHints="phone"
                android:hint="@string/hint_enter_phone_number"
                android:inputType="number"
                android:maxLength="@integer/max_length_phone"
                android:nextFocusForward="@id/etPracticeAddress" />

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/lbl_practice_address_"
                app:fontFamily="@font/font_semi_bold_montserrat" />

            <EditText
                android:id="@+id/etPracticeAddress"
                style="@style/MyEditTextStyle"
                android:layout_marginTop="@dimen/_6sdp"
                android:hint="@string/hint_enter_practice_address"
                android:importantForAutofill="no"
                android:maxLength="@integer/max_length_practice_address"
                android:nextFocusForward="@id/etEmailAddress" />

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/lbl_email_address_"
                app:fontFamily="@font/font_semi_bold_montserrat" />

            <EditText
                android:id="@+id/etEmailAddress"
                style="@style/MyEditTextStyle"
                android:layout_marginTop="@dimen/_6sdp"
                android:autofillHints="emailAddress"
                android:hint="@string/hint_enter_email_address"
                android:inputType="textEmailAddress"
                android:maxLength="@integer/max_length_email"
                android:nextFocusForward="@id/etUsername" />

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/lbl_username_"
                app:fontFamily="@font/font_semi_bold_montserrat" />

            <EditText
                android:id="@+id/etUsername"
                style="@style/MyEditTextStyle"
                android:layout_marginTop="@dimen/_6sdp"
                android:autofillHints="username"
                android:hint="@string/hint_enter_username"
                android:inputType="textCapWords"
                android:maxLength="@integer/max_length_name"
                android:nextFocusForward="@id/etPassword" />

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/lbl_password_"
                app:fontFamily="@font/font_semi_bold_montserrat" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayoutStyle"
                android:layout_marginTop="@dimen/_6sdp">

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/MyEditTextStyle"
                    android:autofillHints="password"
                    android:background="@null"
                    android:elevation="0dp"
                    android:hint="@string/hint_enter_password"
                    android:inputType="textPassword"
                    android:maxLength="@integer/max_length_password"
                    android:nextFocusForward="@id/etConfirmPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/lbl_confirm_password_"
                app:fontFamily="@font/font_semi_bold_montserrat" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayoutStyle"
                android:layout_marginTop="@dimen/_6sdp">

                <EditText
                    android:id="@+id/etConfirmPassword"
                    style="@style/MyEditTextStyle"
                    android:autofillHints="password"
                    android:background="@null"
                    android:elevation="0dp"
                    android:hint="@string/hint_enter_confirm_password"
                    android:inputType="textPassword"
                    android:maxLength="@integer/max_length_password"
                    android:nextFocusForward="@id/etReferredBy" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/lbl_referred_by"
                app:fontFamily="@font/font_semi_bold_montserrat" />

            <EditText
                android:id="@+id/etReferredBy"
                style="@style/MyEditTextStyle"
                android:layout_marginTop="@dimen/_6sdp"
                android:hint="@string/hint_enter_referred_by"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:maxLength="@integer/max_length_name" />

            <TextView
                style="@style/MyTextViewStyle"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/lbl_notification_preference_"
                app:fontFamily="@font/font_semi_bold_montserrat" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/shape_rect_edittext_un_focus"
                android:elevation="@dimen/_1sdp">

                <Spinner
                    android:id="@+id/spNotificationPreference"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@null"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/llNotificationPreference"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etNotificationPreference"
                        style="@style/MyEditTextStyle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:elevation="0dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/select_notification_preference"
                        android:importantForAutofill="no" />

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_12sdp"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/ic_arrow_down"
                        android:visibility="visible"
                        tools:ignore="ContentDescription,NewApi" />
                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbAgreeTCAndPP"
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:background="@drawable/shape_checkbox"
                    android:button="@null"
                    android:checked="false" />

                <TextView
                    android:id="@+id/tvAgreeTCAndPP"
                    style="@style/MyTextViewMultilineStyle"
                    android:layout_width="0dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="@string/content_agree_tc_and_pp"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSignUp"
                style="@style/MyButtonStyle"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/btn_sign_up" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/MyTextViewStyle"
                    android:layout_width="wrap_content"
                    android:text="@string/lbl_already_have_an_account_" />

                <TextView
                    android:id="@+id/tvSignIn"
                    style="@style/MyTextViewStyle"
                    android:layout_width="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/link_sign_in"
                    android:textColor="@color/colorKeppel1"
                    app:fontFamily="@font/font_semi_bold_montserrat" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>