<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/shape_rect_white_top_radius"
    android:elevation="@dimen/_1sdp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp"
    tools:context="com.dentalhelpinghands.adapters.office.OfficeNotificationAdapter">

    <ImageView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/ic_approve" />

    <TextView
        style="@style/MyTextViewStyle"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/title_approve"
        android:textSize="@dimen/_18ssp"
        app:fontFamily="@font/font_bold_montserrat" />


    <TextView
        style="@style/MyTextViewStyle"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:maxLines="2"
        android:singleLine="false"
        android:text="@string/msg_approve" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNo"
            style="@style/MyButtonStyle1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/btn_no" />

        <Button
            android:id="@+id/btnYes"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_weight="1"
            android:text="@string/btn_yes" />
    </LinearLayout>
</LinearLayout>